--- a/translations/kangyur/translations/054-006_toh125-the_golden_sutra.xml
+++ b/translations/kangyur/translations/054-006_toh125-the_golden_sutra.xml
@@ -6,13 +6,13 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Gold Sūtra</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Suvarṇasūtra</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gser gyi mdo</title>
                 <title type="mainTitle" xml:lang="bo">གསེར་གྱི་མདོ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gser gyi mdo</title>
                 <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Gold Sūtra”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­suvarṇa­sūtra­nāma­mahāyāna­sūtra</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa gser gyi mdo zhes bya ba theg pa chen po’i mdo</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་གསེར་གྱི་མདོ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
-                <title type="otherTitle" xml:lang="zh">《黃金經》</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa gser gyi mdo zhes bya ba theg pa chen po’i mdo</title>
+                <title type="otherTitle" xml:lang="zh">《黃金經》（圓滿法藏：《聖金經大乘經》）</title>
                 <author role="translatorMain" xml:id="UT22084-054-006-24">
                     Translated by the Sakya Pandita Translation Group<lb/> under the patronage and supervision of 84000: Translating the Words of the Buddha</author>
                 <consultant role="dharmaMaster" xml:id="UT22084-054-006-25">Khenpo Kalsang Gyaltsen</consultant>
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-054-006-32">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.12 <date>2024</date>
+                <edition>v 1.1.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -191,6 +191,12 @@
                 <change who="#john" when="2024-05-24T15:25:04.15Z" type="text-version" status="1.1.12" xml:id="UT22084-054-006-124">
                     <desc>Amplified the cross-references and added bibliography entries and another note.</desc>
                 </change>
+                <change who="#cabie-sim" when="2024-06-17T08:34:22.133Z" type="text-version" status="1.1.13" xml:id="UT22084-054-006-126">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#andre" when="2024-06-28T09:51:25.956Z" type="text-version" status="1.1.14" xml:id="UT22084-054-006-127">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -268,7 +274,7 @@
                         <ref cRef="F.293.a" type="folio" xml:id="UT22084-054-006-20"/> Homage to all the buddhas and bodhisattvas.</p>
                     <lb/>
                 <milestone unit="chunk" xml:id="UT22084-054-006-6"/>
-                    <p tid="13">Thus did I hear at one time. The Blessed One was dwelling in the Jetavana, in the Park of Anātha­piṇḍada. At that time Venerable
+                    <p tid="13">Thus did I hear at one time. The Blessed One was dwelling in the Jetavana, Anāthapiṇḍada’s Park. At that time Venerable
                     Ānanda asked the Blessed One, “Blessed One, how should the mind of awakening be viewed?” </p>
                 <milestone unit="chunk" xml:id="UT22084-054-006-7"/>
                     <p tid="14">The Blessed One replied, “Venerable Ānanda, the mind of awakening should be viewed as being in nature like gold. Just as gold is pure by nature, so the mind of awakening is pure by nature. Just as a smith shapes gold into a multiplicity of forms, yet the
@@ -378,28 +384,11 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-054-006-18">
-                            <term type="translationMain">Anātha­piṇḍada</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">anāthapiṇḍada</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mgon med zas sbyin</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">མགོན་མེད་ཟས་སྦྱིན།</term>
-                            <note type="definition" rend="override">
-                                <p>A wealthy layman and famous benefactor of the Buddha who purchased the Jetavana and donated it to
-                                the Buddhist community.</p>
-                            </note>
-                        </gloss>
-                    </item>
-                    <item>
-                        <gloss type="place" xml:id="UT22084-054-006-19">
-                            <term type="translationMain">Jetavana</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">jetavana</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal bu rgyal byed kyi tshal</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
-                            <note type="definition" rend="override">
-                                <p>“Prince Jeta’s Grove,” a grove near Śrāvastī that was given to the Buddha by the householder
-                                Anātha­piṇḍada. The Buddha is said to have spent most rainy seasons there, and it is therefore the setting for many
-                                discourses.</p>
-                            </note>
+                        <gloss xml:id="UT22084-054-006-125" type="place" mode="match">
+                            <term type="translationMain">Jetavana, Anāthapiṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
                     </item>
                 </list>
