--- a/translations/kangyur/translations/051-003_toh115_display_of_pure_land_of_sukhavati.xml
+++ b/translations/kangyur/translations/051-003_toh115_display_of_pure_land_of_sukhavati.xml
@@ -22,7 +22,7 @@
         <editor role="TEImarkupEditor" xml:id="UT22084-051-003-187">Simeon Joffe</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 2.20.15 <date>2024</date>
+                <edition>v 2.20.16 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -127,6 +127,9 @@
                 <change who="#martina-cotter" when="2024-02-07T12:01:20.782Z" type="text-version" status="2.20.15" xml:id="UT22084-051-003-211">
                     <desc>revisions update</desc>
                 </change>
+                <change who="#andre" when="2024-06-28T10:19:03.85Z" type="text-version" status="2.20.16" xml:id="UT22084-051-003-213">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
   </teiHeader>
@@ -142,7 +145,7 @@
       <div type="summary">
         <head type="summary" tid="53">Summary</head>
         <milestone unit="chunk" xml:id="UT22084-051-003-1"/>
-        <p tid="1">In the Jeta Grove of Śrāvastī, the Buddha Śākyamuni, surrounded by a large audience, presents to his disciple Śāriputra a detailed
+          <p tid="1">In Śrāvastī, in Jeta’s Grove, the Buddha Śākyamuni, surrounded by a large audience, presents to his disciple Śāriputra a detailed
           description of the realm of Sukhāvatī, a delightful, enlightened abode, free of suffering. Its inhabitants are described as mature beings in an
           environment where everything enhances their spiritual inclinations. The principal buddha of Sukhāvatī is addressed as Amitāyus (Limitless Life) as
           well as Amitābha (Limitless Light). </p>
@@ -225,7 +228,7 @@
         <div type="section" xml:id="UT22084-051-003-introduction-5">
           <head type="section" tid="60">The Setting</head>
           <milestone unit="chunk" xml:id="UT22084-051-003-10"/>
-          <p tid="15">The narrative of the sūtra takes place in the Jeta Grove of Śrāvastī, where the Buddha Śākyamuni, in the presence of a large audience
+            <p tid="15">The narrative of the sūtra takes place in Śrāvastī, in Jeta’s Grove, Anāthapiṇḍada’s Park, where the Buddha Śākyamuni, in the presence of a large audience
             consisting of arhats and bodhisattvas, addresses his disciple Śāriputra and tells him about the realm of Sukhāvatī. The sūtra is in large part a
             discourse spoken by the Buddha. Even though the Buddha regularly asks the question, “Śāriputra, what do you think about this?” Śāriputra speaks only
             at the very end of the sūtra and praises the Buddha.</p>
@@ -290,8 +293,7 @@
             <!--<modularPassage type="homage">-->Homage to all the buddhas and bodhisattvas<!--</modularPassage>-->. </p>
           <lb/>
           <p tid="29">
-            <!--<modularPassage type="thusDid">-->Thus did I hear at one time<!--</modularPassage>-->. The Bhagavān was dwelling in Anāthapiṇḍada’s park in the
-            Jeta Grove in Śrāvastī, along with a large monastic saṅgha of 1,250 bhikṣus,<note place="end" xml:id="UT22084-051-003-150">The Sanskrit has
+              <!--<modularPassage type="thusDid">-->Thus did I hear at one time<!--</modularPassage>-->. The Bhagavān was dwelling in Śrāvastī, in Jeta’s Grove, Anāthapiṇḍada’s Park, along with a large monastic saṅgha of 1,250 bhikṣus,<note place="end" xml:id="UT22084-051-003-150">The Sanskrit has
                 “<foreign type="term" xml:lang="Sa-Ltn">abhijñānābhijñātaiḥ</foreign>”, i.e., “bhikṣus, all of them proficient in the [five kinds of]
               superknowledge.” This is omitted in the Tibetan. </note> all of them great elders, śrāvakas, and arhats, such as the elder Śāriputra,
             Mahā­maudgalyāyana, Mahākāśyapa, Mahā­kātyāyana,<note place="end" xml:id="UT22084-051-003-151">In the Sanskrit version the order is
@@ -752,7 +754,7 @@
                                     of Sukhāvatī</title>) or, informally, the “longer” <title xml:lang="Sa-Ltn">Sukhāvatī</title>.</term>
                         </gloss>
                     </item>-->
-          <item>
+          <!--<item>
             <gloss type="person" xml:id="UT22084-051-003-73">
                             <term type="translationMain">Anāthapiṇḍada</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">anāthapiṇḍada</term>
@@ -763,7 +765,7 @@
                 and donated it to the Buddhist community.</p>
                             </note>
                         </gloss>
-          </item>
+          </item>-->
           <item>
             <gloss type="person" xml:id="UT22084-051-003-74">
                             <term type="translationMain">Śāriputra</term>
@@ -1520,18 +1522,15 @@
                             </note>
                         </gloss>
           </item>
-          <item>
-            <gloss type="place" xml:id="UT22084-051-003-143">
-                            <term type="translationMain">Jeta Grove</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">jetavana</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal bu rgyal byed kyi tshal</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
-                            <note type="definition" rend="override">
-                                <p>The grove of Prince Jeta in Śrāvastī; the Buddha taught many of his discourses there, especially during the rainy season
-                retreat.</p>
-                            </note>
+            <item>
+                        <gloss xml:id="UT22084-051-003-212" type="place" mode="match">
+                            <term type="translationMain">Jeta’s Grove, Anāthapiṇḍada’s Park</term>
+                            <term type="translationAlternative">Jeta’s Grove</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
-          </item>
+                    </item>
           <item>
             <gloss type="place" xml:id="UT22084-051-003-144">
                             <term type="translationMain">Sahā world</term>
