--- a/translations/kangyur/placeholders/061-008_toh188-the_sutra_of_the_prophecy_by_dipamkara.xml
+++ b/translations/kangyur/placeholders/061-008_toh188-the_sutra_of_the_prophecy_by_dipamkara.xml
@@ -18,12 +18,12 @@
                 <editor role="projectEditor" xml:id="UT22084-061-008-21">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-061-008"/>
                 <date/>
             </publicationStmt>
@@ -71,6 +71,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-22T09:24:13.89Z" type="text-version" status="0.0.8" xml:id="UT22084-061-008-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-28T12:35:36.836Z" type="translation-status" status="2.e" xml:id="UT22084-061-008-25">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-28T12:35:36.836Z" type="text-version" status="0.0.9" xml:id="UT22084-061-008-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
