--- a/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
+++ b/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
@@ -12,15 +12,16 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryāṣṭadevīdhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha mo brgyad kyi gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-087-002-1">84000 Associate Translators</author>
-                <author role="translatorEng" xml:id="UT22084-087-002-2">Adam Krug</author>
+                <author role="translatorEng" xml:id="UT22084-087-002-2">Adam C. Krug</author>
                 <editor role="projectEditor" xml:id="UT22084-087-002-13">Nathaniel Rich</editor>
+                <editor role="copyEditor" xml:id="UT22084-087-002-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-087-002"/>
                 <date/>
             </publicationStmt>
@@ -83,6 +84,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-14T12:25:43.501Z" type="text-version" status="0.0.8" xml:id="UT22084-087-002-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-14T12:29:24.743Z" type="text-version" status="0.0.9" xml:id="UT22084-087-002-23">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-28T13:47:06.535Z" type="translation-status" status="2.d" xml:id="UT22084-087-002-24">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-28T13:47:06.535Z" type="text-version" status="0.0.10" xml:id="UT22084-087-002-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
