--- a/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
@@ -10,15 +10,16 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryagrahamātṛkānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gza' rnams kyi yum zhes bya ba'i gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-091-057-1">84000 Associate Translators</author>
-                <author role="translatorEng" xml:id="UT22084-091-057-2">Adam Krug</author>
+                <author role="translatorEng" xml:id="UT22084-091-057-2">Adam C. Krug</author>
                 <editor role="projectEditor" xml:id="UT22084-091-057-13">Rory Lindsay</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-057-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-091-057"/>
                 <date/>
             </publicationStmt>
@@ -81,6 +82,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-14T12:26:42.337Z" type="text-version" status="0.0.8" xml:id="UT22084-091-057-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-14T12:28:38.817Z" type="text-version" status="0.0.9" xml:id="UT22084-091-057-23">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-28T13:50:26.992Z" type="translation-status" status="2.d" xml:id="UT22084-091-057-24">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-28T13:50:26.992Z" type="text-version" status="0.0.10" xml:id="UT22084-091-057-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
