--- a/translations/kangyur/placeholders/091-058_toh661,998-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-058_toh661,998-the_incantation_the_mother_of_the_demons.xml
@@ -11,15 +11,16 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">gza' rnams kyi yum zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gza' rnams kyi yum zhes ba'i gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-091-058-1">84000 Associate Translators</author>
-                <author role="translatorEng" xml:id="UT22084-091-058-2">Adam Krug</author>
+                <author role="translatorEng" xml:id="UT22084-091-058-2">Adam C. Krug</author>
                 <editor role="projectEditor" xml:id="UT22084-091-058-13">Rory Lindsay</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-058-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-091-058"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +83,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-14T12:27:30.022Z" type="text-version" status="0.0.8" xml:id="UT22084-091-058-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-14T12:28:09.967Z" type="text-version" status="0.0.9" xml:id="UT22084-091-058-23">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-28T13:53:22.449Z" type="translation-status" status="2.d" xml:id="UT22084-091-058-24">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-28T13:53:22.449Z" type="text-version" status="0.0.10" xml:id="UT22084-091-058-25">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
