--- a/translations/kangyur/translations/044-004_toh84-the_sutra_of_the_girl_vimalasraddhas_questions.xml
+++ b/translations/kangyur/translations/044-004_toh84-the_sutra_of_the_girl_vimalasraddhas_questions.xml
@@ -35,7 +35,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-044-004-382">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.14 <date>2024</date>
+                <edition>v 1.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -223,6 +223,9 @@
                 <change who="#celso" when="2024-04-22T14:45:05.006Z" type="text-version" status="1.0.14" xml:id="UT22084-044-004-434">
                     <desc>Activated pending links</desc>
                 </change>
+                <change who="#andre" when="2024-06-28T14:51:56.825Z" type="text-version" status="1.0.15" xml:id="UT22084-044-004-436">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -232,7 +235,7 @@
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-044-004-1"/>
                 <p tid="2">Vimalaśraddhā, the daughter of King Prasenajit, comes to see the Buddha
-                    in Jetavana, together with a retinue of five hundred women. She pays homage to
+                    in Jetavana, Anātha­piṇḍada’s Park, together with a retinue of five hundred women. She pays homage to
                     the Buddha and asks him to explain the conduct of bodhisattvas. The Buddha
                     responds by presenting twelve sets of eight qualities that bodhisattvas should
                     cultivate. Vimalaśraddhā and her five hundred companions, having developed the
@@ -264,7 +267,7 @@
                         benefits that come from such cultivation.</p>
                     <milestone unit="chunk" xml:id="UT22084-044-004-8"/>
                     <p tid="11">The sūtra begins with the princess Vimalaśraddhā, daughter of King
-                        Prasenajit, coming to see the Buddha in Jetavana, together with a retinue of
+                        Prasenajit, coming to see the Buddha in Jetavana, Anātha­piṇḍada’s Park, together with a retinue of
                         five hundred women. In some expressive verses, she pays homage to the Buddha
                         and asks him to explain the conduct of bodhisattvas. The Buddha responds by
                         presenting twelve sets of eight qualities that bodhisattvas should
@@ -448,8 +451,7 @@
                         Homage to all the buddhas and bodhisattvas!</p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-044-004-23"/>
-                    <p tid="24">Thus did I hear at one time. The Blessed One was residing at
-                        Jetavana, Anātha­piṇḍada’s park in Śrāvastī, together with a large assembly
+                    <p tid="24">Thus did I hear at one time. The Blessed One was residing in Śrāvastī, in Jetavana, Anātha­piṇḍada’s park, together with a large assembly
                         of five hundred bhikṣus and eight thousand bodhisattva mahāsattvas who were
                         well versed in all fields of knowledge, had obtained retention and unimpeded
                         eloquence, were fully accomplished in patience, were completely victorious
@@ -2618,7 +2620,7 @@
                     <item>
                         <gloss type="person" xml:id="UT22084-044-004-330">
                             <term type="translationMain">Anātha­piṇḍada</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">anāthapiṇḍada</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">anātha­piṇḍada</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mgon med zas
                                 sbyin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">མགོན་མེད་ཟས་སྦྱིན།</term>
@@ -2692,11 +2694,17 @@
                                 kyi tshal</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
                             <term xml:lang="zh" type="attestedSource">祇樹給孤獨園</term>
-                            <note type="definition" rend="override">
-                                <p>“Prince Jeta’s Grove.” A grove near Śrāvastī that was given to
-                                    the Buddha and his monks by the householder Anāthapiṇḍada. The
-                                    Buddha gave many teachings there. </p>
+                            <note type="definition">
+                                <p>“Prince Jeta’s Grove.” See “Jetavana, Anātha­piṇḍada’s Park.”</p>
                             </note>
+                        </gloss>
+                    </item>
+                    <item>
+                        <gloss xml:id="UT22084-044-004-435" type="place" mode="match">
+                            <term type="translationMain">Jetavana, Anātha­piṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
                     </item>
                     <item>
