--- a/translations/kangyur/translations/043-012_toh75-the_questions_of_gangottara.xml
+++ b/translations/kangyur/translations/043-012_toh75-the_questions_of_gangottara.xml
@@ -26,7 +26,7 @@
         <editor role="finalReviewer" xml:id="UT22084-043-012-233">George FitzHerbert</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.4 <date>2024</date>
+                <edition>v 1.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -181,6 +181,9 @@
                 <change who="#konchog" when="2024-05-27T21:04:34.369Z" type="text-version" status="1.0.4" xml:id="UT22084-043-012-242">
                     <desc>Several fixes in the main translation.</desc>
                 </change>
+                <change who="#andre" when="2024-06-28T15:07:54.462Z" type="text-version" status="1.0.5" xml:id="UT22084-043-012-244">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -194,7 +197,7 @@
         <milestone unit="chunk" xml:id="UT22084-043-012-47"/>
         <tei:p tid="2">In <title xml:lang="en">The Questions of Gaṅgottarā</title>, a laywoman named
           Gaṅgottarā leaves her home in the city of Śrāvastī and visits the Buddha Śākyamuni in
-          Anāthapiṇḍada’s Park. The Buddha asks her from where she has come, sparking a dialogue on
+          Prince Jeta’s Grove, Anāthapiṇḍada’s Park. The Buddha asks her from where she has come, sparking a dialogue on
           the true nature of things. Among other things, they discuss the fact that, from the
           perspective of ultimate truth, all things, including Gaṅgottarā herself, are like magical
           creations, and thus no one comes or goes or pursues nirvāṇa. After their dialogue, the
@@ -223,7 +226,7 @@
                         <title xml:lang="en">The Questions of Gaṅgottarā</title> is a short but
             sophisticated dialogue that opens with a laywoman named Gaṅgottarā leaving her home in
             the city of Śrāvastī and going to visit the Buddha Śākyamuni, who is dwelling nearby in
-            Anāthapiṇḍada’s Park. When she arrives, the Buddha asks her, “from where have you come?”
+            Prince Jeta’s Grove, Anāthapiṇḍada’s Park. When she arrives, the Buddha asks her, “from where have you come?”
             and this question sparks a dialogue between them on the true nature of things. They
             discuss the fact that all things, including Gaṅgottarā herself, are like magical
             creations, and thus, from the perspective of ultimate truth, no one comes or goes or
@@ -344,8 +347,8 @@
                         <tei:ref cRef="F.222.a" type="folio" xml:id="UT22084-043-012-205"/> Homage to all
             buddhas and bodhisattvas!</tei:p>
           <lb/>
-          <tei:p tid="26">Thus did I hear at one time. The Blessed One was dwelling in Prince Jeta’s
-            Grove, Anāthapiṇḍada’s Park, near Śrāvastī. At that time a laywoman named Gaṅgottarā was
+          <tei:p tid="26">Thus did I hear at one time. The Blessed One was dwelling in Śrāvastī, in Prince Jeta’s
+            Grove, Anāthapiṇḍada’s Park. At that time a laywoman named Gaṅgottarā was
             living in the great city of Śrāvastī.<tei:note place="end" xml:id="UT22084-043-012-74"> The
               Dunhuang manuscript says it a bit more simply: “At that time, there was a laywoman
               named Gaṅgottarā in the city of Śrāvastī…” (<foreign xml:lang="Bo-Ltn" type="quote">de’i tshe grong khyer mnyan yod na | dge bsnyen ma gang ga’i mchog ces bya ba zhig
@@ -1145,20 +1148,12 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="place" xml:id="UT22084-043-012-203">
-              <term type="translationMain">Prince Jeta’s Grove </term>
-              <term status="verified" xml:lang="Bo-Ltn" n="1">rgyal bu rgyal byed kyi tshal </term>
-              <term xml:lang="bo" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
-              <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">jetavana</term>
-            </gloss>
-                    </item>
-          <item>
-                        <gloss type="place" xml:id="UT22084-043-012-204">
-              <term type="translationMain">Anāthapiṇḍada’s Park</term>
-              <term status="verified" xml:lang="Bo-Ltn" n="1">mgon med zas sbyin gyi kun dga’ ra ba </term>
-              <term xml:lang="bo" n="1">མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
-              <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">anātha­piṇḍadārāma</term>
-            </gloss>
+                        <gloss xml:id="UT22084-043-012-243" type="place" mode="match">
+                            <term type="translationMain">Prince Jeta’s Grove, Anāthapiṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
+                        </gloss>
                     </item>
         </list>
       </tei:div>
