--- a/translations/kangyur/translations/043-005_toh68-ascertaining_the_discipline_the_sutra_of_upalis_questions.xml
+++ b/translations/kangyur/translations/043-005_toh68-ascertaining_the_discipline_the_sutra_of_upalis_questions.xml
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-043-005-505">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.3.4 <date>2024</date>
+                <edition>v 1.3.5 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -203,6 +203,9 @@
                 <change who="#celso" when="2024-04-24T11:10:58.755Z" type="text-version" status="1.3.4" xml:id="UT22084-043-005-547">
                     <desc>Activated pending links</desc>
                 </change>
+                <change who="#andre" when="2024-06-28T15:38:38.652Z" type="text-version" status="1.3.5" xml:id="UT22084-043-005-548">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -241,7 +244,7 @@
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-043-005-4"/>
                     <p tid="8">The sūtra opens in the north Indian city of Śrāvastī, where the Buddha resides among a vast assembly of monks and
-                        bodhisattvas in Anāthapiṇḍada’s Park at Prince Jeta’s Grove. Addressing the bodhisattvas in the assembly, the Buddha asks who
+                        bodhisattvas in Prince Jeta’s Grove, Anāthapiṇḍada’s Park. Addressing the bodhisattvas in the assembly, the Buddha asks who
                         will uphold the Dharma and bring beings to maturity in future times. A number of the bodhisattvas present in the assembly
                         voice their <term rend="ignore">desire</term> to uphold various aspects of the Dharma or to help beings through specific
                         powers. At Śāriputra’s prompting, the Buddha next describes the special means that bodhisattvas utilize to bring beings to
@@ -382,7 +385,7 @@
                         <ref cRef="F.115.a" type="folio" xml:id="UT22084-043-005-427"/> Homage to all the buddhas and bodhisattvas!</p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-043-005-19"/>
-                    <p tid="18">Thus did I hear at one time: The Bhagavān was dwelling in Śrāvastī, at Anāthapiṇḍada’s park in Prince Jeta’s Grove,
+                    <p tid="18">Thus did I hear at one time: The Bhagavān was dwelling in Śrāvastī, in Prince Jeta’s Grove, Anāthapiṇḍada’s Park,
                         together with a great monastic assembly of about five hundred monks as well as a thousand bodhisattvas. The Bhagavān looked
                         upon those bodhisattva mahāsattvas with a gaze like an elephant’s and said to them, “Sons of noble birth, for the sake of
                         upholding the holy Dharma in the future, in later times, who among you wishes to take up the unsurpassed, completely perfect
@@ -2241,7 +2244,7 @@
                             </note>
                         </gloss>
                     </item>
-                    <item>
+                    <!--<item>
                         <gloss type="person" xml:id="UT22084-043-005-332">
                             <term type="translationMain">Anāthapiṇḍada</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">anāthapiṇḍada</term>
@@ -2252,7 +2255,7 @@
                                 the saṅgha. He is better known in the West by the alternative form Anāthapiṇḍika.</p>
                             </note>
                         </gloss>
-                    </item>
+                    </item>-->
                     <item>
                         <gloss type="person" xml:id="UT22084-043-005-333">
                             <term type="translationMain">Aśokaśrī</term>
@@ -3270,14 +3273,10 @@
                     </item>
                     <item>
                         <gloss type="place" xml:id="UT22084-043-005-423">
-                            <term type="translationMain">Prince Jeta’s Grove</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">jetavana</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal bu rgyal byed kyi tshal</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
-                            <note type="definition" rend="override">
-                                <p>The grove of Prince Jeta in Śrāvastī; the Buddha taught many of his discourses there, especially
-                                during the rainy season retreat.</p>
-                            </note>
+                            <term type="translationMain">Prince Jeta’s Grove, Anāthapiṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
                     </item>
                     <item>
