--- a/translations/kangyur/translations/043-005_toh68-ascertaining_the_discipline_the_sutra_of_upalis_questions.xml
+++ b/translations/kangyur/translations/043-005_toh68-ascertaining_the_discipline_the_sutra_of_upalis_questions.xml
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-043-005-505">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.3.5 <date>2024</date>
+                <edition>v 1.3.6 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -205,6 +205,9 @@
                 </change>
                 <change who="#andre" when="2024-06-28T15:38:38.652Z" type="text-version" status="1.3.5" xml:id="UT22084-043-005-548">
                     <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
+                <change who="#andre" when="2024-06-28T15:42:37.231Z" type="text-version" status="1.3.6" xml:id="UT22084-043-005-549">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied - minor correction</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
