--- a/translations/kangyur/translations/034-030_toh42-the_sutra_of_the_moon.xml
+++ b/translations/kangyur/translations/034-030_toh42-the_sutra_of_the_moon.xml
@@ -22,7 +22,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-030-157">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -163,6 +163,9 @@
                 </change>
                 <change who="#sameer" when="2023-11-12T11:25:27.69Z" type="text-version" status="1.0.3" xml:id="UT22084-034-030-167">
                     <desc>Included in App v 3.8</desc>
+                </change>
+                <change who="#andre" when="2024-06-28T16:16:30.49Z" type="text-version" status="1.0.4" xml:id="UT22084-034-030-168">
+                    <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -358,8 +361,7 @@
                         Respectful homage to the noble Three Jewels!</p>
                     <lb/>
                     <milestone unit="chunk" xml:id="UT22084-034-030-41"/>
-                    <p tid="30">Thus did I hear at one time. The Blessed One was dwelling in Jeta
-                        Grove, Anāthapiṇḍada’s park in Śrāvastī.<note place="end" xml:id="UT22084-034-030-42"> The Paritta collection gives the setting in
+                    <p tid="30">Thus did I hear at one time. The Blessed One was dwelling in Śrāvastī, in Jeta’s Grove, Anāthapiṇḍada’s Park.<note place="end" xml:id="UT22084-034-030-42"> The Paritta collection gives the setting in
                             full, as does the Tibetan, but it is abbreviated as <title xml:lang="Pi-Ltn">sāvatthinidānaṃ</title> in the SN. The setting of
                             Toh 331<ref rend="pending" target="http://read.84000.co/translation/toh31.htm"/> is on the bank
                             of the Traveler Pond in the country of Campā. </note> At that time the
@@ -730,7 +732,7 @@
                             </note>
                         </gloss>
                     </item>
-                    <item>
+                    <!--<item>
                         <gloss xml:id="UT22084-034-030-104" type="person" mode="match">
                             <term type="translationMain">Anāthapiṇḍada</term>
                             <term type="translationAlternative">anāthapiṇḍika</term>
@@ -741,7 +743,7 @@
                                 <p>Anāthapiṇḍada was a wealthy merchant in the town of Śrāvastī, famous for his generosity to the poor, who became a patron of the Buddha Śākyamuni. He bought the Jeta Grove from Prince Jeta and built a monastery there for the Buddha.</p>
                             </note>
                         </gloss>
-                    </item>
+                    </item>-->
                     <item>
                         <gloss type="person" xml:id="UT22084-034-030-105">
                             <term type="translationMain">Ānandaśrī</term>
@@ -798,14 +800,10 @@
                     </item>
                     <item>
                         <gloss xml:id="UT22084-034-030-111" type="place" mode="match">
-                            <term type="translationMain">Jeta Grove</term>
-                            <term type="translationAlternative">jetavana</term>
-                            <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">jetavana</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal byed tshal</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བྱེད་ཚལ།</term>
-                            <note type="definition" rend="override">
-                                <p>A grove that was bought by the Buddha’s wealthy follower and supporter Anāthapiṇḍada from a prince named Jeta and donated to the Buddha and his saṅgha</p>
-                            </note>
+                            <term type="translationMain">Jeta’s Grove, Anāthapiṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal byed tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བྱེད་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
                         </gloss>
                     </item>
                 </list>
