--- a/translations/kangyur/placeholders/001-002_toh1-2-chapter_2_on_the_rite_of_restoration.xml
+++ b/translations/kangyur/placeholders/001-002_toh1-2-chapter_2_on_the_rite_of_restoration.xml
@@ -19,11 +19,11 @@
                 <editor role="copyEditor" xml:id="UT22084-001-002-41">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.12 <date>2024</date>
+                <edition>v 0.1.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-001-002"/>
                 <date/>
             </publicationStmt>
@@ -93,6 +93,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-04-09T09:41:59.06Z" type="text-version" status="0.1.12" xml:id="UT22084-001-002-44">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-01T11:41:55.116Z" type="translation-status" status="2.c" xml:id="UT22084-001-002-45">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-01T11:41:55.116Z" type="text-version" status="0.1.13" xml:id="UT22084-001-002-46">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
