--- a/translations/kangyur/placeholders/001-005_toh1-5-chapter_5_on_leather.xml
+++ b/translations/kangyur/placeholders/001-005_toh1-5-chapter_5_on_leather.xml
@@ -15,12 +15,12 @@
                 <author role="translatorEng" xml:id="UT22084-001-005-6">Jamyang Rinchen</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-001-005"/>
                 <date/>
             </publicationStmt>
@@ -54,6 +54,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-001-005-12">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-01T14:09:28.352Z" type="translation-status" status="2.g" xml:id="UT22084-001-005-13">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-01T14:09:28.352Z" type="text-version" status="0.0.6" xml:id="UT22084-001-005-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
