--- a/translations/kangyur/translations/076-001_toh347-the_exemplary_tale_of_punyabala.xml
+++ b/translations/kangyur/translations/076-001_toh347-the_exemplary_tale_of_punyabala.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-076-001-440">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.13 <date>2024</date>
+                <edition>v 1.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -165,6 +165,9 @@
                 </change>
                 <change who="#andre" when="2024-06-26T10:51:27.237Z" type="text-version" status="1.0.13" xml:id="UT22084-076-001-480">
                     <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
+                <change who="#konchog" when="2024-07-01T21:39:28.472Z" type="text-version" status="1.0.14" xml:id="UT22084-076-001-481">
+                    <desc>Fixed error in punctuation of the Buddha's retelling of King Krkin's dreams.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
